<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="332dp"
                android:layout_height="75dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewTxtID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_want_you_back"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewTxtID2"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/april_6_1990"
                    android:textColor="#AEAEAE"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/viewTxtID3"
                android:layout_width="111dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2_10"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="332dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewTxtID4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/someone_you_loved"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewTxtID5"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_mars_2019"
                    android:textColor="#AEAEAE"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/viewTxtID6"
                android:layout_width="111dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3_30"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewTxtID7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still_feel_like_your_man"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewTxtID8"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_aug_2020"
                    android:textColor="#AEAEAE"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/viewTxtID9"
                android:layout_width="111dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_50"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:layout_weight="1"
                android:text="@string/i_still_keep_your_shampoo_in_my_shower_in_case_you_wanna_wash_your_hair_and_i_know_that_you_probably_found_yourself_someone_somewhere_but_i_do_not_really_care_cause_as_long_as_it_is_there_i_still_feel_like_your_man"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="332dp"
                android:layout_height="55dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewTxtID10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still_feel_like_your_man"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_mars_2020"
                    android:textColor="#AEAEAE"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="111dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1:50"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="332dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calleth_you_cometh_i"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_october_2020"
                    android:textColor="#AEAEAE"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="111dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2_40"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_idea" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>